--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -201,7 +201,7 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-google-play"></i>
       Download</button>
     <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-apple"></i>
@@ -215,6 +215,10 @@
   <footer id="footer">
 
     <p>© Copyright 2021 TinDog</p>
+    <i class="social-icon fab fa-facebook"></i>
+    <i class="social-icon fab fa-twitter"></i>
+    <i class="social-icon fas fa-envelope-open-text"></i>
+    <i class="social-icon fab fa-github"></i>
 
   </footer>
 
