--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           </div>
         
         <div class="card-body">
-          <h2>Free</h2>
+          <h2 class="price-text">Free</h2>
           <p>5 Matches Per Day</p>
           <p>10 Messages Per Day</p>
           <p>Unlimited App Usage</p>
@@ -164,7 +164,7 @@
             <h3>Labrador</h3>
           </div>
           <div class="card-body">
-            <h2>$49 / mo</h2>
+            <h2 class="price-text">$49 / mo</h2>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
@@ -181,7 +181,7 @@
             <h3>Mastiff</h3>
           </div>
           <div class="card-body">
-            <h2>$99 / mo</h2>
+            <h2 class="price-text">$99 / mo</h2>
             <p>Pirority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
@@ -201,7 +201,7 @@
 
   <section id="cta">
 
-    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-google-play"></i>
       Download</button>
     <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-apple"></i>
